--- a/index.html
+++ b/index.html
@@ -465,13 +465,13 @@ a {
                     </div>
                     <div class="footer_links-wrapper">
                       <div class="margin-bottom margin-xxsmall">
-                        <a href="#faq" class="footer_link">Home</a>
+                        <a href="#game" class="footer_link">Game</a>
                       </div>
                       <div class="margin-bottom margin-xxsmall">
                         <a href="#faq" class="footer_link">FAQ</a>
                       </div>
                       <div class="margin-bottom margin-xxsmall">
-                        <a href="#game" class="footer_link">Game</a>
+                        <a href="contact.html" class="footer_link">Contact Us</a>
                       </div>
                     </div>
                   </div>
