--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -71,10 +71,7 @@
 
 <p><strong>More Information</strong></p>
 
-<p>However if you are still looking for more information then you can contact us through one of our preferred contact methods:</p>
+<p>However if you are still looking for more information then you can contact us through one of our preferred contact methods on main page.</p>
 
-<ul>
-<li>Email: {{mail}}</li>
-</ul>
 </body>
 </html>
